--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "homepage": "http://miyuna-projects.github.io/miyuchat-irc",
   "name": "client",
+  "homepage": "https://miyuna-projects.github.io/miyuchat-irc",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -25,6 +25,8 @@
     "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
+    "test": "react-scripts test",
+    "eject": "react-scripts eject",
     "scss": "sass --watch ."
   },
   "eslintConfig": {
